--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Latihan Table</h1>
     <h2>Daftar Produk</h2>
-    <table>
+    <table border="1">
             <tr>
                 <th>No</th>
                 <th>Nama Produk</th>
@@ -21,13 +21,18 @@
             </tr>
             <tr>
                 <td>2</td>
-                <td>Keyboard</td>
+                <td>Keyboard </td>
                 <td>300.000</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Mouse</td>
+                <td>Mouse Wireless</td>
                 <td>100.000</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Headphone</td>
+                <td>150.000</td>
             </tr>
     </table>
 
