--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Latihan Table</h1>
     <h2>Daftar Produk</h2>
-    <table border="1">
+    <table border="1" width="80%" height="200px">
             <tr>
-                <th>No</th>
-                <th>Nama Produk</th>
-                <th>Harga</th>
+                <th width="10%">No</th>
+                <th width="50%">Nama Produk</th>
+                <th width="40%">Harga</th>
             </tr>
             <tr>
                 <td>1</td>
@@ -22,17 +22,17 @@
             <tr>
                 <td>2</td>
                 <td>Keyboard </td>
-                <td>300.000</td>
+                <td>Rp 300.000</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Mouse Wireless</td>
-                <td>100.000</td>
+                <td>Rp 100.000</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Headphone</td>
-                <td>150.000</td>
+                <td>Rp 150.000</td>
             </tr>
     </table>
 
