--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h2>Daftar Produk</h2>
     <table border="1" width="80%" height="200px">
             <tr>
-                <th width="10%">No</th>
-                <th width="50%">Nama Produk</th>
-                <th width="40%">Harga</th>
+                <th style="background-color: #4caf50; color: white;">No</th>
+                <th style="font-size: 18px; text-align: center;">Nama Produk</th>
+                <th style="font-weight: bold;">Harga</th>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Monitor</td>
-                <td>Rp 500.000</td>
+                <td style="text-align: center;">1</td>
+                <td style="text-transform: uppercase;">Monitor</td>
+                <td style="color: red;">Rp 500.000</td>
             </tr>
             <tr>
                 <td>2</td>
