--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Latihan Table</h1>
     <h2>Daftar Produk</h2>
-    <table border="1" width="80%" height="200px">
+    <table border="1" style="border-collapse: collapse; width: 100%;">
             <tr>
                 <th style="background-color: #4caf50; color: white;">No</th>
                 <th style="font-size: 18px; text-align: center;">Nama Produk</th>
