--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <body>
     <h1>Latihan Table</h1>
     <h2>Daftar Produk</h2>
-    <table border="1" style="border-collapse: collapse; width: 100%;">
+    <table border="1" style="border-collapse: collapse; 
+            width: 100%;">
             <tr>
-                <th style="background-color: #4caf50; color: white;">No</th>
-                <th style="font-size: 18px; text-align: center;">Nama Produk</th>
-                <th style="font-weight: bold;">Harga</th>
+                <th style="background-color: #4caf50; 
+                color: white; font-weight: bold;
+                font-size: 18px; text-align: center;">No</th>
+                <th style="background-color: #4caf50; 
+                color: white; font-weight: bold;
+                font-size: 18px; text-align: center;">Nama Produk</th>
+                <th style="background-color: #4caf50; 
+                color: white; font-weight: bold;
+                font-size: 18px; text-align: center;">Harga</th>
             </tr>
             <tr>
                 <td style="text-align: center;">1</td>
