--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pertemuan 6</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid black;
+        }
+        th {
+            background-color: #4caf50;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            text-align: center;
+        }
+        td:nth-child(1) {
+            text-align: center;
+        }
+        td:nth-child(2) {
+            text-transform: uppercase;
+        }
+        td:nth-child(3) {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Latihan Table</h1>
